compiler/testData/diagnostics/tests/duplicateJvmSignature/traitImpl/traitPropertyOverriddenByFunctionInTrait.kt
interface T {
    val x: Int
        get() = 1
}

interface <!CONFLICTING_JVM_DECLARATIONS!>C<!> : T {
    fun getX() = 1
}
